--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,19 +36,23 @@ else()
 set(ARCH_DIR "32-bit")
 endif()
 
+set(COMMON_SRC
+  Classes/AppDelegate.cpp
+  Classes/BaseScene.cpp
+  Classes/HelloWorldScene.cpp
+)
+
 if( UNIX ) #assume linux
 set(GAME_SRC
   proj.linux/main.cpp
-  Classes/AppDelegate.cpp
-  Classes/HelloWorldScene.cpp
+  ${COMMON_SRC}
 )
 elseif ( WIN32 )
 set(GAME_SRC
   proj.win32/main.cpp
   proj.win32/main.h
   proj.win32/resource.h
-  Classes/AppDelegate.cpp
-  Classes/HelloWorldScene.cpp
+  ${COMMON_SRC}
 )
 endif()
 
