--- a/proj.win32/bointerpp.vcxproj.filters
+++ b/proj.win32/bointerpp.vcxproj.filters
@@ -29,16 +29,16 @@
     <ClInclude Include="main.h">
       <Filter>win32</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\AppDelegate.h">
+    <ClInclude Include="..\Classes\AppDelegate.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\Common.h">
+    <ClInclude Include="..\Classes\Common.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\BaseScene.h">
+    <ClInclude Include="..\Classes\BaseScene.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\HelloWorldScene.h">
+    <ClInclude Include="..\Classes\GameMenu\GameMenuScene.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
