Added new background image for main menu. Removed default cocos2d-x background and font

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,8 @@ local.properties
 *.suo
 Debug.win32/
 Release.win32/
+
+# Project specific
+tmp
+# temporary, due to file size
+Resources/GameMenu/GameMenu.svg
