--- a/proj.win32/bointerpp.vcxproj
+++ b/proj.win32/bointerpp.vcxproj
@@ -138,15 +138,15 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
-    <ClCompile Include="..\Classes\BaseScene.cpp" />
-    <ClCompile Include="..\GameMenu\GameMenuScene.cpp" />
+    <ClCompile Include="..\Classes\Common\BaseScene.cpp" />
+    <ClCompile Include="..\Classes\GameMenuScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
-    <ClInclude Include="..\Classes\Common.h" />
-    <ClInclude Include="..\Classes\BaseScene.h" />
-    <ClInclude Include="..\GameMenu\GameMenuScene.h" />
+    <ClInclude Include="..\Classes\Common\Common.h" />
+    <ClInclude Include="..\Classes\Common\BaseScene.h" />
+    <ClInclude Include="..\Classes\GameMenuScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
