--- a/proj.win32/bointerpp.vcxproj
+++ b/proj.win32/bointerpp.vcxproj
@@ -137,16 +137,30 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\Classes\AppDelegate.cpp" />
-    <ClCompile Include="..\Classes\Common\BaseScene.cpp" />
-    <ClCompile Include="..\Classes\GameMenuScene.cpp" />
+	<ClCompile Include="..\Classes\AppDelegate.cpp" />
+	<ClCompile Include="..\Classes\GameMenuScene.cpp" />
+	<ClCompile Include="..\Classes\Common\GameScene.cpp" />
+	<ClCompile Include="..\Classes\Common\BaseScene.cpp" />
+	<ClCompile Include="..\Classes\Dialogs\InfoDialog.cpp" />
+	<ClCompile Include="..\Classes\Dialogs\ConfigDialog.cpp" />
+	<ClCompile Include="..\Classes\Dialogs\BaseDialog.cpp" />
+	<ClCompile Include="..\Classes\Dialogs\PlayerDialog.cpp" />
+	<ClCompile Include="..\Classes\Playing\UnitPlayingScene.cpp" />
+	<ClCompile Include="..\Classes\Selection\UnitSelectionScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Classes\AppDelegate.h" />
-    <ClInclude Include="..\Classes\Common\Common.h" />
-    <ClInclude Include="..\Classes\Common\BaseScene.h" />
-    <ClInclude Include="..\Classes\GameMenuScene.h" />
+	<ClInclude Include="..\Classes\AppDelegate.h" />
+	<ClInclude Include="..\Classes\GameMenuScene.h" />
+	<ClInclude Include="..\Classes\Common\BaseScene.h" />
+	<ClInclude Include="..\Classes\Common\Common.h" />
+	<ClInclude Include="..\Classes\Common\GameScene.h" />
+	<ClInclude Include="..\Classes\Dialogs\InfoDialog.h" />
+	<ClInclude Include="..\Classes\Dialogs\ConfigDialog.h" />
+	<ClInclude Include="..\Classes\Dialogs\PlayerDialog.h" />
+	<ClInclude Include="..\Classes\Dialogs\BaseDialog.h" />
+	<ClInclude Include="..\Classes\Playing\UnitPlayingScene.h" />
+	<ClInclude Include="..\Classes\Selection\UnitSelectionScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
