--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(APP_NAME bointerpp)
 project (${APP_NAME})
 
 include(cocos2d/build/BuildHelpers.CMakeLists.txt)
+include(SourceFiles.txt)
 
 option(USE_CHIPMUNK "Use chipmunk for physics library" ON)
 option(USE_BOX2D "Use box2d for physics library" OFF)
@@ -54,19 +55,6 @@ else()
 set(ARCH_DIR "32-bit")
 endif()
 
-set(COMMON_SRC
-	Classes/AppDelegate.cpp
-	Classes/GameMenuScene.cpp
-	Classes/Common/GameScene.cpp
-	Classes/Common/BaseScene.cpp
-	Classes/Dialogs/InfoDialog.cpp
-	Classes/Dialogs/ConfigDialog.cpp
-	Classes/Dialogs/BaseDialog.cpp
-	Classes/Dialogs/PlayerDialog.cpp
-	Classes/Playing/UnitPlayingScene.cpp
-	Classes/Selection/UnitSelectionScene.cpp
-)
-
 if( UNIX ) #assume linux
 set(GAME_SRC
   proj.linux/main.cpp
@@ -80,16 +68,6 @@ set(GAME_SRC
   ${COMMON_SRC}
 )
 endif()
-
-set(COMMON_INCLUDE
-	${CMAKE_SOURCE_DIR}/Classes
-	${CMAKE_SOURCE_DIR}/Classes/Collaboration
-	${CMAKE_SOURCE_DIR}/Classes/Common
-	${CMAKE_SOURCE_DIR}/Classes/Building
-	${CMAKE_SOURCE_DIR}/Classes/Dialogs
-	${CMAKE_SOURCE_DIR}/Classes/Playing
-	${CMAKE_SOURCE_DIR}/Classes/Selection
-)
 
 set(COCOS2D_ROOT ${CMAKE_SOURCE_DIR}/cocos2d)
 if (WIN32)
